indigo-build: utils build scripts updated

--- a/utils/indigo-cano/CMakeLists.txt
+++ b/utils/indigo-cano/CMakeLists.txt
@@ -5,9 +5,12 @@ project(IndigoCano)
 include(DefineTest)
 include_directories(../../api)
 
-add_executable(indigo-cano main.c)
-target_link_libraries(indigo-cano indigo)
-if (UNIX)
+add_executable(indigo-cano main.c $<TARGET_OBJECTS:indigoObj> $<TARGET_OBJECTS:graph> $<TARGET_OBJECTS:layout> $<TARGET_OBJECTS:molecule> $<TARGET_OBJECTS:common> $<TARGET_OBJECTS:reaction>)
+target_link_libraries(indigo-cano tinyxml z inchi)
+if(APPLE)
+	target_link_libraries(indigo-cano c++)
+endif()
+if(UNIX)
     set_target_properties(indigo-cano PROPERTIES LINK_FLAGS "-pthread")
 endif()
 pack_executable(indigo-cano)
